[package]
name = "treeval_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["cargo", "derive"] }
colored = "2.1.0"
compare = "0.1.0"
csv = "1.3.1"
human-panic = "2.0.2"
noodles = { version = "0.85.0", features = ["cram", "fasta", "core", "csi"] }
once_cell = "1.20.2"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
